Version 11.61

 - QS_SrvMaxConnPerIP can handle more than MaxClient IP addresses
   (if the server opens new connections faster than closing old)
   and enables memory block distribution by default.

Version 11.60

 - Fixed: Wrong connection counter (total server connections stored in the
   QS_AllConn variable) when using SrvMaxConn* directives globally only but
   other QS_* directives within virtual hosts. Bug influenced
   QS_SrvMinDataRate behavior as well (activating and increasing the min.
   data rate too fast).

Version 11.59

 - QS_EventRequestLimit writes the current counter value to the
   QS_EventRequestLimit_<env-variable>_Counter envrionment variable.

 - New directive QS_SetEnvIfCmp.

Version 11.58

 - Adds directive QS_UnsetReqHeader.

 - Removes version information in automake configure script (utilities).

Version 11.57

 - Adds qsrespeed and qsre (previous "regexspeed" and "regex" dev tool)
   to the support utilities.

Version 11.56

 - Non-functional: Changed QS_Status invocation timer implementation.

 - Adds qsdt (previous "duration" dev tool) to the support utilities.

Version 11.55

 - qslog: "-l" supports files with huge gaps (missing lines).

 - QS_SetEnvIf and QS_SetEnvIfQuery directives can be used within Location
   configuration.
 
Version 11.54

 - Introduces the QS_Block_Decrement variable.

Version 11.53

 - Adds CORS headers to the default QS_RequestHeaderFilter and
   QS_ResponseHeaderFilter rule set.

 - qslog: shows also the distribution of response durations faster than
   a second within the following intervals:
   * 0-49ms
   * 50-99ms
   * 100-499ms
   * 500-999ms
  
Version 11.52

 - Fixed: QS_LimitRequestBody did not work for chunked requests
   when used in Apache 2.4.

 - QS_Status uses the server's base configuration settings while logging
   allowing to configure a custom log format using ErrorLogFormat.
   
 - qssign's verification mode supports graceful restart (sigusr1) where