@@ -1,6 +1,8 @@
 #
 # $Id$
 #
+# <VirtualHost   127.0.0.1:##QS_PORT_BASE##>
+#
 #      QS_SrvMaxConnPerIP         30
 #
 
@@ -21,11 +23,11 @@ _CLOSE
 _SLEEP 1000
 
 _REQ localhost $QS_PORT_BASE
-__GET /cgi-local/sleep.cgi?s=1 HTTP/1.1
+__GET /index.html HTTP/1.1
 __Host: localhost
 __Connection: keep-alive
 __
-_EXPECT . "done"
+_EXPECT . "this is the root index.html"
 _WAIT
 
 END
@@ -45,6 +47,18 @@ _CLOSE
 _SLEEP 200
 _EXPECT EXEC "mod_qos\(031\): access denied, QS_SrvMaxConnPerIP rule: max=30, concurrent connections=31"
 _EXEC tail -2 logs/error_log
+
+END
+
+CLIENT
+_SLEEP 2000
+_REQ localhost SSL:$QS_PORT_BASE2
+__GET /index.html HTTP/1.1
+__Host: localhost
+__Connection: keep-alive
+__
+_EXPECT . "this is the root index.html"
+_WAIT
 
 END
 
