@@ -1,10 +1,16 @@
 #
-# $Id$
+# $Id: 029_QS_SrvMaxConn.htt 2317 2017-11-08 16:36:23Z pbuchbinder $
 #
+#
+#  QS_SrvMaxConn               4
+#
+# <VirtualHost   127.0.0.1:##QS_PORT_BASE##>
 #   QS_SrvMaxConn              45
 #
 
 INCLUDE scripts/ports
+
+EXEC ./ctl.sh restart -D QS_SrvMaxConnBase 2>&1 >/dev/null
 
 CLIENT 45
 _SLEEP 5000
@@ -20,7 +26,20 @@ _CLOSE
 
 END
 
-CLIENT 1
+CLIENT 4
+_SLEEP 7000
+_REQ localhost $QS_PORT_BASE1
+__GET /cgi/sleep.cgi?s=3 HTTP/1.1
+__Host: localhost
+__Connection: keep-alive
+__
+_EXPECT . "done"
+_EXPECT . "200 OK"
+_WAIT
+_CLOSE
+END
+
+CLIENT
 _SLEEP 6000
 _REQ localhost $QS_PORT_BASE
 _EXPECT ERROR "Connection reset by peer"
@@ -41,10 +60,23 @@ __Connection: keep-alive
 __
 _EXPECT . "v;127.0.0.1;${QS_PORT_BASE};QS_SrvMaxConn;45..: 45"
 _EXPECT . "!v;127.0.0.1;${QS_PORT_BASE1};QS_SrvMaxConn"
-_EXPECT . "!b;127.0.0.1;0;QS_SrvMaxConn"
+_EXPECT . "b;127.0.0.1;0;QS_SrvMaxConn;4..: 1"
 _EXPECT . "b;127.0.0.1;0;QS_AllConn: 46"
 _WAIT
 _CLOSE
+
+_SLEEP 1500
+_REQ localhost $QS_PORT_BASE1
+_EXPECT ERROR "Connection reset by peer"
+__GET /cgi-local/sleep.cgi?s=3 HTTP/1.1
+__Host: localhost
+__Connection: keep-alive
+__
+_WAIT
+_CLOSE
+_SLEEP 100
+_EXPECT EXEC "mod_qos\(030\): access denied, QS_SrvMaxConn rule: max=4, concurrent connections=5"
+_EXEC tail -3 logs/error_log
 
 _SLEEP 14000
 _REQ localhost $QS_PORT_BASE
@@ -56,4 +88,9 @@ _EXPECT . "done"
 _EXPECT . "200 OK"
 _WAIT
 
+END
+
+BLOCK FINALLY
+_SLEEP 100
+_EXEC ./ctl.sh restart 2>/dev/null 1>/dev/null
 END
